# mumps

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  Makefile.gfortran.inc  Makefile.ifort.inc  Makefile.inc  README.md  build.py  build_gfortran.sh  build_gnu_MKL.sh  build_gnu_noMKL.sh  build_gnu_self.sh  build_intel.sh  build_intel_centos.sh  build_intel_ubuntu.sh  build_self.sh  meson.build
LAPACK95/: LICENSE  README.md  make.inc
LAPACK95/SRC/: makefile
MUMPS/: Makefile  Makefile.gfortran  Makefile.inc  README.md
MUMPS/Make.inc/: Makefile.INTEL.PAR  Makefile.debian.PAR
MUMPS/PORD/lib/: Makefile
MUMPS/src/: CMakeLists.txt  sources.cmake
PORD/: CMakeLists.txt  meson.build
PORD/lib/: CMakeLists.txt  libpord
archive/: build_gnu_MKL.sh  build_intel.sh
cmake/: compilers.cmake
cmake/Modules/: FindLAPACK.cmake  FindLAPACK95.cmake  FindMKL.cmake  FindMUMPS.cmake  FindSCALAPACK.cmake  FindScotch.cmake
scalapack/: CMakeLists.txt
scalapack/CMAKE/: FortranMangling.cmake
scotch/include/: scotchf.h
scotch/src/: Makefile.inc
scotch/src/check/: Makefile
scotch/src/esmumps/: Makefile  common.h  main_esmumps
scotch/src/libscotch/: dummysizes  scotch.h
scotch/src/scotch/: acpl  amk_ccc  amk_fft2  amk_grf  amk_hy  amk_m2  amk_p2  atst  gbase  gcv  gmap  gmk_hy  gmk_m2  gmk_m3  gmk_msh  gmk_ub2  gmtst  gord  gotst  gout  gpart  gscat  gtst  mcv  mmk_m2  mmk_m3  mord  mtst
src/: CMakeLists.txt  Makefile  meson.build  sources.cmake
tests/: CMakeLists.txt  DemoLapack95.f90  DemoLapack95_MKL.f90  meson.build  test_mumps.f90
