pord_src = files('lib/graph.c', 'lib/gbipart.c', 'lib/gbisect.c', 'lib/ddcreate.c', 'lib/ddbisect.c',
  'lib/nestdiss.c', 'lib/multisector.c', 'lib/gelim.c', 'lib/bucket.c',
  'lib/tree.c', 'lib/symbfac.c', 'lib/interface.c', 'lib/sort.c', 'lib/minpriority.c')

pord = library('pord', pord_src, include_directories : 'include')
